projects/compiler/test/typechecker/invocation/generics_error_inferred_from_ret.1.out
Error at %FILE_NAME%:3:21
Type mismatch
  |  val a: Int[] = foo(["a"])
                         ^
Expected: Int
but instead found: String
